--- a/index.html
+++ b/index.html
@@ -2,356 +2,124 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Instrumentenerkennung - Musig Eggersriet</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <title>Gutschein zum 53. Geburtstag</title>
   <style>
-    /* Grundlegendes Layout */
     body {
-      font-family: 'Roboto', sans-serif;
-      background-image: url('Hintergrund.jpg');
-      background-size: cover;
-      background-attachment: fixed;
-      background-position: center;
       margin: 0;
       padding: 0;
-      color: #003366;
+      background: url('geburtstag.jpg') no-repeat center center fixed;
+      background-size: cover;
+      font-family: sans-serif;
     }
 
-    /* Halbtransparenter Overlay */
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.6);
-      z-index: -1;
+    .container {
+      max-width: 700px;
+      margin: 50px auto;
+      background-color: #fff3e0; /* sanfter hautfarbener Ton */
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
     }
 
-    /* Header-Stile */
-    header {
-      background-color: rgba(0, 51, 102, 0.9);
-      padding: 15px;
+    h1 {
       text-align: center;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      font-size: 36px;
+      color: #bf360c;
+      margin-bottom: 10px;
     }
 
-    header img {
-      max-width: 80px;
-      vertical-align: middle;
-    }
-
-    header h1 {
-      display: inline;
-      font-size: 1.8em;
-      margin-left: 10px;
-      color: #f5f7fa;
-    }
-
-    /* Startseite */
-    #startScreen {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+    .birthday-banner {
       text-align: center;
-      background-color: rgba(0, 0, 0, 0.3);
+      font-size: 22px;
+      margin-bottom: 25px;
+      color: #e65100;
     }
 
-    #startScreen h2 {
-      font-size: 2em;
-      color: #f5f7fa;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-    }
-
-    #startScreen p {
-      font-size: 1.2em;
-      color: #e6e9ef;
-    }
-
-    #startScreen button {
-      font-size: 1.2em;
-      padding: 15px 30px;
-      background-color: #005599;
-      color: #f5f7fa;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-      margin-top: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    #startScreen button:hover {
-      background-color: #0077cc;
-    }
-
-    /* Quiz-Bereich */
-    main {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
+    .intro {
+      font-size: 18px;
+      margin-bottom: 25px;
+      background-color: #ffe0b2;
       padding: 20px;
-      background-color: rgba(255, 255, 255, 0.85);
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      max-width: 90%;
-      margin: 0 auto;
+      border-left: 6px solid #ff9800;
+      border-radius: 10px;
     }
 
-    video {
-      width: 90%;
-      max-width: 640px;
-      height: auto;
-      border: 3px solid #005599;
-      border-radius: 8px;
-      background-color: #fff;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      margin-top: 10px;
-    }
-
-    select, button {
-      font-size: 1.1em;
-      padding: 10px;
-      margin-top: 15px;
-      border-radius: 5px;
-      border: 1px solid #003366;
-      width: 90%;
-      max-width: 300px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: 0.3s;
-    }
-
-    button {
-      background-color: #003366;
-      color: white;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #005599;
-    }
-
-    #result {
-      font-size: 1.5em;
-      font-weight: bold;
-      color: #005599;
-      margin-top: 20px;
-    }
-
-    /* Endseite */
-    #endScreen {
-      display: none;
-      padding: 15px;
-      text-align: center;
-      height: 100vh;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #endScreen h2, #endScreen p {
-      color: #f5f7fa;
-    }
-
-    #endScreen button {
-      font-size: 1em;
-      padding: 10px 20px;
-      background-color: #003366;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    #endScreen button:hover {
-      background-color: #005599;
-    }
-
-    /* Modal für Tonhinweis */
-    #soundModal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.6);
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
-    }
-
-    #soundModal .modal-content {
-      background-color: white;
+    .checkbox-group {
+      background-color: #ffffffbb;
       padding: 20px;
-      text-align: center;
-      border-radius: 8px;
-      max-width: 300px;
-      font-size: 1.2em;
-      color: #003366;
+      border-radius: 12px;
+      margin-top: 20px;
+      border: 2px dashed #ffcc80;
     }
 
-    /* Kleine Bildschirme */
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.2em;
-      }
+    label {
+      display: block;
+      margin-bottom: 15px;
+      font-size: 18px;
+      cursor: pointer;
+    }
 
-      #startScreen h2, #endScreen h2 {
-        font-size: 1.5em;
-      }
+    input[type="checkbox"] {
+      margin-right: 12px;
+      transform: scale(1.3);
+    }
 
-      select, button {
-        font-size: 1em;
-      }
+    .footer {
+      text-align: center;
+      margin-top: 40px;
+      font-style: italic;
+      color: #4e342e;
+      font-size: 16px;
+    }
 
-      video {
-        max-width: 100%;
-      }
+    .emoji {
+      font-size: 24px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Hintergrund-Overlay -->
-  <div class="overlay"></div>
+  <div class="container">
+    <h1>Zum 53. Geburtstag 🎉</h1>
+    <div class="birthday-banner">Alles gueti zum Geburtstag Mama!!</div>
 
-  <!-- Header mit Logo und Titel -->
-  <header>
-    <img src="Logo.jpg" alt="Musig Eggersriet Logo">
-    <h1>Musig Eggersriet - Instrumentenerkennung</h1>
-  </header>
+    <div class="intro">
+      Danke Mama dases dii git ❤️<br>
+      I wünsch dir en mega schöne Tag, loh dirs vo niemertem versaue...<br>
+      Eifach abhooke und denn gnüsse 🥳
+    </div>
 
-  <!-- Startseite -->
-  <div id="startScreen">
-    <h2>Willkommen zum Instrumentenerkennungs-Quiz!</h2>
-    <p>Teste dein Wissen über verschiedene Musikinstrumente und finde heraus, ob du das richtige Instrument erkennst.</p>
-    <button onclick="startQuiz()">Start</button>
-  </div>
+    <div class="checkbox-group">
+      <label><input type="checkbox" id="check1">🧺 Wäsche aufhängen – 1. Mal</label>
+      <label><input type="checkbox" id="check2">🧺 Wäsche aufhängen – 2. Mal</label>
+      <label><input type="checkbox" id="check3">👕 Wäsche zusammenlegen – 1. Mal</label>
+      <label><input type="checkbox" id="check4">👕 Wäsche zusammenlegen – 2. Mal</label>
+      <label><input type="checkbox" id="check5">🧹 Stube aufräumen – 1. Mal</label>
+      <label><input type="checkbox" id="check6">🧹 Stube aufräumen – 2. Mal</label>
+      <label><input type="checkbox" id="check7">🍝 Kochen – 1. Mal</label>
+      <label><input type="checkbox" id="check8">🍝 Kochen – 2. Mal</label>
+    </div>
 
-  <!-- Quizbereich -->
-  <main id="quizScreen" style="display: none;">
-    <h2>Erkenne das Instrument im Video</h2>
-    <video id="randomVideo" autoplay controls></video>
-    <label for="instrumentSelect">Welches Instrument wird gespielt?</label>
-    <select id="instrumentSelect">
-      <option value="---">---</option>
-      <option value="Es-Horn">Es-Horn</option>
-      <option value="Bass">Bass</option>
-      <option value="Flügelhorn">Flügelhorn</option>
-      <option value="Bariton">Bariton</option>
-      <option value="Posaune">Posaune</option>
-      <option value="B-Cornet">B-Cornet</option>
-      <option value="Euphonium">Euphonium</option>
-      <option value="Perkussion">Perkussion</option>
-      <option value="Es-Cornet">Es-Cornet</option>
-    </select>
-    <button onclick="checkAnswer()">Auswahl bestätigen</button>
-    <div id="result"></div>
-    <button onclick="playRandomVideo()">Nächstes Video</button>
-    <button onclick="endGame()">Beenden</button>
-  </main>
-
-  <!-- Endseite -->
-  <div id="endScreen">
-    <h2>Spiel beendet!</h2>
-    <p>Richtige Antworten: <span id="correctAnswers"></span></p>
-    <p>Falsche Antworten: <span id="incorrectAnswers"></span></p>
-    <p>Nicht beantwortete Fragen: <span id="unansweredQuestions"></span></p>
-    <button onclick="restartGame()">Spiel neu starten</button>
-  </div>
-
-  <!-- Modal für Tonhinweis -->
-  <div id="soundModal">
-    <div class="modal-content">
-      <p>Ton an!</p>
-      <button onclick="closeSoundModal()">OK!</button>
+    <div class="footer">
+      Din Jonas 💛<br>
     </div>
   </div>
 
-  <!-- JavaScript bleibt unverändert -->
   <script>
-    const videos = [
-      { src: 'Es-Horn.mp4', instrument: 'Es-Horn' },
-      { src: 'Bass.mp4', instrument: 'Bass' },
-      { src: 'Flügelhorn.mp4', instrument: 'Flügelhorn' },
-      { src: 'Bariton.mp4', instrument: 'Bariton' },
-      { src: 'Posaune.mp4', instrument: 'Posaune' },
-      { src: 'B-Cornet.mp4', instrument: 'B-Cornet' },
-      { src: 'Euphonium.mp4', instrument: 'Euphonium' },
-      { src: 'Perkussion.mp4', instrument: 'Perkussion' },
-      { src: 'Es-Cornet.mp4', instrument: 'Es-Cornet' },
+    const checkboxIds = [
+      "check1", "check2", "check3", "check4",
+      "check5", "check6", "check7", "check8"
     ];
 
-    let currentVideo = null;
-    let correctAnswers = 0;
-    let incorrectAnswers = 0;
-    let unansweredQuestions = [];
+    checkboxIds.forEach(id => {
+      const checkbox = document.getElementById(id);
+      const checked = localStorage.getItem(id) === "true";
+      checkbox.checked = checked;
 
-    function startQuiz() {
-      document.getElementById('startScreen').style.display = 'none';
-      document.getElementById('quizScreen').style.display = 'block';
-      playRandomVideo();
-      showSoundModal();
-    }
-
-    function playRandomVideo() {
-      if (currentVideo && document.getElementById('instrumentSelect').value === '---') {
-        unansweredQuestions.push(currentVideo.instrument);
-      }
-      const randomIndex = Math.floor(Math.random() * videos.length);
-      currentVideo = videos[randomIndex];
-      const videoElement = document.getElementById('randomVideo');
-      videoElement.src = currentVideo.src;
-      videoElement.play();
-      document.getElementById('instrumentSelect').value = '---';
-      document.getElementById('result').innerText = '';
-    }
-
-    function checkAnswer() {
-      const selectedInstrument = document.getElementById('instrumentSelect').value;
-      if (selectedInstrument === '---') return;
-      if (selectedInstrument === currentVideo.instrument) {
-        correctAnswers++;
-        document.getElementById('result').innerText = 'Richtig!';
-      } else {
-        incorrectAnswers++;
-        document.getElementById('result').innerText = 'Falsch!';
-      }
-    }
-
-    function endGame() {
-      document.getElementById('quizScreen').style.display = 'none';
-      document.getElementById('endScreen').style.display = 'block';
-      document.getElementById('correctAnswers').innerText = correctAnswers;
-      document.getElementById('incorrectAnswers').innerText = incorrectAnswers;
-      document.getElementById('unansweredQuestions').innerText = unansweredQuestions.length;
-    }
-
-    function restartGame() {
-      correctAnswers = 0;
-      incorrectAnswers = 0;
-      unansweredQuestions = [];
-      document.getElementById('startScreen').style.display = 'flex';
-      document.getElementById('endScreen').style.display = 'none';
-      document.getElementById('instrumentSelect').value = '---';
-      document.getElementById('result').innerText = '';
-      document.getElementById('randomVideo').pause();
-      document.getElementById('randomVideo').src = '';
-    }
-
-    function showSoundModal() {
-      document.getElementById('soundModal').style.display = 'flex';
-    }
-
-    function closeSoundModal() {
-      document.getElementById('soundModal').style.display = 'none';
-    }
+      checkbox.addEventListener("change", () => {
+        localStorage.setItem(id, checkbox.checked);
+      });
+    });
   </script>
-
 </body>
 </html>
