--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('geburtstag.jpg') no-repeat center center fixed;
+      background: url('Geburtstag.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: sans-serif;
     }
